--- a/learn-javascript/04-JavaScript基础/28-浅拷贝和深拷贝.md
+++ b/learn-javascript/04-JavaScript基础/28-浅拷贝和深拷贝.md
@@ -159,16 +159,13 @@ console.log(JSON.stringify(obj2));
 {"name":"qianguyihao","sex":"男","age":28,"desc":"hello world"}
 ```
 
-注意，**例 4 在实际开发中，会经常遇到，一定要掌握**。它的作用是：将 obj1 的值追加到 obj2 中。如果两个对象里的属性名相同，则 obj12 中的值会被 obj2 中的值覆盖。
-
+注意，**例 4 在实际开发中，会经常遇到，一定要掌握**。它的作用是：将 obj1 的值追加到 obj2 中。如果两个对象里的属性名相同，则 obj1 中的值会被 obj2 中的值覆盖。
 
 ## 深拷贝的实现方式
 
 深拷贝其实就是将浅拷贝进行递归。
 
 ### 用 for in 递归实现深拷贝
-
-代码实现：
 
 ```js
 let obj1 = {
@@ -205,4 +202,54 @@ function deepCopy(newObj, oldObj) {
         }
     }
 }
+```
+
+### 用JSON方法实现深拷贝
+
+```js
+//_tmp和result是相互独立的，没有任何联系，有各自的存储空间。
+let deepClone = function (obj) {
+    let _tmp = JSON.stringify(obj);//将对象转换为json字符串形式
+    let result = JSON.parse(_tmp);//将转换而来的字符串转换为原生js对象
+    return result;
+};
+
+let obj1 = {
+    weiqiujaun: {
+        age: 20,
+        class: 1502
+    },
+    liuxiaotian: {
+        age: 21,
+        class: 1501
+    }
+};
+
+let test = deepClone(obj1);
+console.log(test);
+```
+
+### 利用数组的Array.prototype.forEach实现深拷贝
+
+```js
+let deepClone = function (obj) {
+    let copy = Object.create(Object.getPrototypeOf(obj));
+    let propNames = Object.getOwnPropertyNames(obj);
+    propNames.forEach(function (items) {
+        let item = Object.getOwnPropertyDescriptor(obj, items);
+        Object.defineProperty(copy, items, item);
+
+    });
+    return copy;
+};
+
+let testObj = {
+    name: "weiqiujuan",
+    sex: "girl",
+    age: 22,
+    favorite: "play",
+    family: {brother: "wei", mother: "haha", father: "heihei"}
+}
+let testRes2 = deepClone(testObj);
+console.log(testRes2);
 ```
