--- a/learn-javascript/04-JavaScript基础/39-事件简介.md
+++ b/learn-javascript/04-JavaScript基础/39-事件简介.md
@@ -1,8 +1,3 @@
-
-> 本文最初发表于[博客园](http://www.cnblogs.com/smyhvae/p/8366012.html)，并在[GitHub](https://github.com/qianguyihao/Web)上持续更新**前端的系列文章**。欢迎在GitHub上关注我，一起入门和进阶前端。
-
-> 以下是正文。
-
 ## 事件简介
 
 事件：就是文档或浏览器窗口中发生的一些特定的交互瞬间。对于 Web 应用来说，有下面这些代表性的事件：点击某个元素、将鼠标移动至某个元素上方、关闭弹窗等等。
@@ -55,10 +50,6 @@ JavaScript 是以**事件驱动为核心**的一门语言。JavaScript 与 HTML 
 
 </body>
 ```
-
-常见的事件如下：
-
-![](http://img.smyhvae.com/20180126_1553.png)
 
 下面针对这事件的三要素，进行分别介绍。
 
@@ -163,9 +154,6 @@ var arr2 = document.getElementsByClassName("hehe");  //方式三：通过 类名
 
 - 在js里写属性名时，是`backgroundColor`，不是CSS里面的`background-color`。
 
-实现效果如下：
-
-![](http://img.smyhvae.com/20180126_1720.gif)
 
 ### onload事件
 
@@ -190,8 +178,6 @@ var arr2 = document.getElementsByClassName("hehe");  //方式三：通过 类名
 **备注**：关于 onLoad事件，在下一篇文章《DOM简介和DOM操作》中有更详细的讲解和示例。
 
 ### 事件举例：京东顶部广告栏
-
-![](http://img.smyhvae.com/20180122_1020.png)
 
 比如上面这张图，当鼠标点击右上角的`X`时，关掉整个广告栏，这就要用到事件。
 
@@ -273,7 +259,7 @@ var arr2 = document.getElementsByClassName("hehe");  //方式三：通过 类名
 
 注意最后一行代码，这种方式会替换旧类名，意思是，不管之前的类名叫什么，都会被修改。
 
-### 事件举例：
+### 事件举例
 
 要求实现效果：当鼠标悬停在img上时，更换为另外一张图片；鼠标离开时，还原为本来的图片。
 
@@ -317,12 +303,3 @@ var arr2 = document.getElementsByClassName("hehe");  //方式三：通过 类名
 
 </html>
 ```
-
-## 我的公众号
-
-想学习**代码之外的技能**？不妨关注我的微信公众号：**千古壹号**（id：`qianguyihao`）。
-
-扫一扫，你将发现另一个全新的世界，而这将是一场美丽的意外：
-
-![](http://img.smyhvae.com/20190101.png)
-
